[package]
name = "sort-of"
authors = ["Mohit Singh <mohit@mohitsingh.in>"]
version = "0.1.0"
edition = "2018"
description = "A cli for sorting json"
repository = "https://github.com/mohitsighs/sort-of"

[dependencies]
clap = "3.0.0-beta.2"
ignore = "0.4.18"
json = "0.12.4"

[profile.release]
opt-level = 'z'
lto = true
