[package]
name = "jsort"
authors = ["Mohit Singh <mohit@mohitsingh.in>"]
version = "0.1.0"
edition = "2018"
description = "A command line tool for sorting json"
repository = "https://github.com/mohitsighs/jsort"

[dependencies]
clap = { version = "3.1.8", features = ["cargo"] }
ignore = "0.4.18"
json = "0.12.4"

[profile.release]
opt-level = 'z'
lto = true
